<resources>
    <string name="app_name">ToDoList</string>
    <string name="filter">filtrar</string>
    <string name="newTask">Nova tarefa</string>
    <string name="o_que_procura">O que procura?</string>
    <string name="todo_list">Todo List</string>
    <string name="title_activity_add_new_task">AddNewTask</string>
    <string name="nova_tarefa">Nova tarefa</string>
    <string name="salvar">Salvar</string>
    <string name="delete_task" />
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
</resources>