<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addNewTask"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddNewTask">

    <LinearLayout
        android:id="@+id/linearLayoutNewTask"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_linear_background"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextTitleTask"
            style="@style/editTextAddNewTask"
            android:hint="@string/nova_tarefa"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/text_primary" />

        <EditText
            android:id="@+id/editTextData"
            style="@style/editTextAddNewTask"
            android:focusable="false"
            android:hint="@string/dd_mm_yyyy"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textColorHint="@color/text_primary" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/spinner_background"
            android:padding="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSaveNewTask"
            style="@style/buttonStyleAddNewTAsk"
            android:text="@string/salvar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>